Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-64178

Gstreamer 1.0 backend fails to compile with older gstreamer versions

XMLWordPrintable

      Apparently gst-plugins-base <=1.1.2 did not have region of interest feature yet which causes build to fail in camerabinfocus.cpp. Perhaps Qt should check gst-plugins-base version as well and/or disable this feature if it is not present.

      camerabinfocus.cpp: In member function ‘virtual bool CameraBinFocus::probeBuffer(GstBuffer*)’:
      camerabinfocus.cpp:513:31: error: ‘GST_VIDEO_REGION_OF_INTEREST_META_INFO’ was not declared in this scope
      const GstMetaInfo *info = GST_VIDEO_REGION_OF_INTEREST_META_INFO;
      ^
      camerabinfocus.cpp:519:9: error: ‘GstVideoRegionOfInterestMeta’ was not 
      declared in this scope
      GstVideoRegionOfInterestMeta *region = reinterpret_cast<GstVideoRegionOfInterestMeta *>(meta);
      ^
      camerabinfocus.cpp:519:39: error: ‘region’ was not declared in this scope
      GstVideoRegionOfInterestMeta *region = reinterpret_cast<GstVideoRegionOfInterestMeta *>(meta);
      ^
      camerabinfocus.cpp:519:65: error: expected type-specifier before ‘GstVideoRegionOfInterestMeta’
      GstVideoRegionOfInterestMeta *region = reinterpret_cast<GstVideoRegionOfInterestMeta *>(meta);
      ^
      camerabinfocus.cpp:519:65: error: expected ‘>’ before
      ‘GstVideoRegionOfInterestMeta’
      camerabinfocus.cpp:519:65: error: expected ‘(’ before ‘GstVideoRegionOfInterestMeta’
      camerabinfocus.cpp:519:95: error: expected primary-expression before ‘<’ token
      GstVideoRegionOfInterestMeta *region = reinterpret_cast<GstVideoRegionOfInterestMeta *>(meta);
      ^
      camerabinfocus.cpp:519:102: error: expected ‘)’ before ‘;’ token GstVideoRegionOfInterestMeta *region = reinterpret_cast<GstVideoRegionOfInterestMeta *>(meta);
      ^
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            valentyn.doroshchuk Valentyn Doroshchuk
            poikelin Joni Poikelin
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes