Gstreamer: Fix compiling issue with < 1.1.3 ver

GST_VIDEO_REGION_OF_INTEREST_META_INFO is available from 1.1.3

Task-number: QTBUG-64178
Change-Id: I70e99775bfa51679df387738924b7b8fabedaae0
Reviewed-by: Christian Stromme <christian.stromme@qt.io>